--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,9 @@ services:
       POSTGRES_USER: dbuser
       POSTGRES_PASSWORD: password
     ports:
-     - "5432:5432"
+      - "5432:5432"
+    volumes:
+      - ./tmp/pgdata:/var/lib/postgresql/data
   app:
     container_name: api
     build:
